# LRHTCP-LoRa

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Drivers/: CMakeLists.txt  lrhtcp_driver.h
Drivers/RPi_x_ARMv8_64/: CMakeLists.txt
Lib/: CMakeLists.txt  resources.rc
Lib/include/: LightWhaleLibrary.h  liblightwhale.h  lightwhale  lightwhale.h  lwdef.h  lwdriver.h  lwpacket.h
Lib/include/cxx/: lightwhale.hh
Lib/src/: lightwhale.c  lwdef.c  lwdriver.c  lwpacket.c
Lib/src/cxx/: lightwhale.cxx
Lib/test/: lw_init.cxx
